--- a/templates/categorie/new.html.twig
+++ b/templates/categorie/new.html.twig
@@ -13,14 +13,15 @@
     <h1 style="padding: 25px 25px;">Ajouter une nouvelle catégorie</h1>
 
     {{ form_start(form) }}
-        <div style="margin-bottom: 20px;">
-            {{ form_label(form.name) }}
-            {{ form_widget(form.name, {'attr': {'style': 'width: 50%; padding: 10px; font-size: 18px;'}}) }}
-            {{ form_errors(form.name) }}
-        </div>
+    <div style="margin-bottom: 20px; text-align: center;">
+        {{ form_label(form.name) }}
+        {{ form_widget(form.name, {'attr': {'class': 'form-control', 'style': 'width: 50%; padding: 10px; font-size: 18px; margin: auto;'}}) }}
+        {{ form_errors(form.name) }}
+    </div>
 
-        <button class="btn btn-primary" style="font-size: 20px; margin-top: 15px;">Ajouter</button>
-    {{ form_end(form) }}
+    <button class="btn btn-primary" style="font-size: 20px; margin-top: 15px; display: block; margin: auto;">Ajouter</button>
+{{ form_end(form) }}
+
 </div>
 
     <br>
