--- a/templates/politique_confidentialite.html.twig
+++ b/templates/politique_confidentialite.html.twig
@@ -5,15 +5,23 @@
 {% block body %}
 <section style="height: auto; margin:30px; list-style-type: none; border: 2px solid white; border-radius: 10px; padding: 20px; font-size: 20px;">
     <h1>Politique de Confidentialité</h1>
-    <p>Nous accordons une grande importance à la protection de vos données personnelles. Dans le cadre de notre engagement envers la sécurité et la confidentialité, nous appliquons des mesures strictes pour protéger toutes les informations collectées. Les noms d'utilisateur et les mots de passe sont systématiquement hachés et cryptés, garantissant leur sécurisation contre toute tentative de vol ou d'accès non autorisé.
+    <p>Nous accordons une grande importance à la protection de vos données personnelles. 
+      Dans le cadre de notre engagement envers la sécurité et la confidentialité, 
+      nous appliquons des mesures strictes pour protéger toutes les informations collectées. 
+      Les noms d'utilisateur et les mots de passe sont systématiquement hachés et cryptés, 
+      garantissant leur sécurisation contre toute tentative de vol ou d'accès non autorisé.
 
-      <br>  Nos pratiques de sécurité incluent également l'utilisation d'un chiffrement avancé pour sécuriser toutes les communications entre vous et nos serveurs. Ce chiffrement garantit que vos données restent confidentielles et intègres, même en cas d'interception.
+    <br>  Nos pratiques de sécurité incluent également l'utilisation d'un chiffrement avancé pour sécuriser toutes les communications entre vous et nos serveurs. 
+      Ce chiffrement garantit que vos données restent confidentielles et intègres, même en cas d'interception.
         
-       <br> Nous sommes conformes au RGPD (Règlement Général sur la Protection des Données), une réglementation européenne visant à renforcer la protection des données personnelles. <br> Nous respectons également les recommandations de la CNIL (Commission Nationale de l'Informatique et des Libertés), l'autorité française chargée de veiller à la protection des données personnelles.
+    <br> Nous sommes conformes au RGPD (Règlement Général sur la Protection des Données), une réglementation européenne visant à renforcer la protection des données personnelles. <br> 
+       Nous respectons également les recommandations de la CNIL (Commission Nationale de l'Informatique et des Libertés), 
+       l'autorité française chargée de veiller à la protection des données personnelles.
         
-      <br>  En adoptant ces mesures rigoureuses, nous nous engageons à assurer la sécurité et la confidentialité de vos informations personnelles. <br> Votre confiance est précieuse pour nous, et nous mettons tout en œuvre pour mériter cette confiance en protégeant vos données avec la plus grande vigilance.
+    <br>  En adoptant ces mesures rigoureuses, nous nous engageons à assurer la sécurité et la confidentialité de vos informations personnelles. <br> 
+      Votre confiance est précieuse pour nous, et nous mettons tout en œuvre pour mériter cette confiance en protégeant vos données avec la plus grande vigilance.
         
-     <br>   En adoptant ces pratiques rigoureuses, nous nous engageons à protéger vos informations personnelles et à préserver votre confiance. Votre sécurité est notre priorité.</p>
+    <br>   En adoptant ces pratiques rigoureuses, nous nous engageons à protéger vos informations personnelles et à préserver votre confiance. Votre sécurité est notre priorité.</p>
 </section>
 
 {% endblock %}
