--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -29,7 +29,8 @@
     </button>
 
     <button class="btn">
-        <a href="{{ path('app_forgot_password_request') }}" style="text-decoration: none; color: inherit;">Mot de Passe oublié</a>
+        <a href="{{ path('app_password_request') }}" class="btn" style="font-size: 20px; width: 100%; text-align: center; padding: 10px 0;">Mot de passe Oublié</a>
     </button>
+    
 </form>
 {% endblock %}
