--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -2,26 +2,20 @@
 
 {% block title %}Page d'Accueil - Aéroclub {% endblock %}
 
-
 {% block stylesheets %}
     <link rel="stylesheet" type="text/css" href="{{ asset('public/css/style.css') }}">
-    
     <!-- Préchargement de la police Google -->
     <link href="https://fonts.googleapis.com/css?family=Oswald" as="style">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald" crossorigin="anonymous">
     
     <!-- BOOSTRAP-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-   
-
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous" defer></script>
 
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
     <script src="https://kit.fontawesome.com/b04d3e51a0.js" crossorigin="anonymous"></script>
-
-    
 {% endblock %}
 
 {% block navbar %}
@@ -36,7 +30,7 @@
 
 {% block body %}
 
-    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel" style="width: 60%; height:auto; justify-content:center;display: flex;">
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel" style="width: 70%; height:auto; justify-content:center;display: flex;">
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img class="d-block w-100" src="uploads/images/avionpose.jpeg" alt="First slide">
@@ -50,13 +44,13 @@
         </div>
     </div>
 <main>
-    <h4 id="ParagrapheTexte" style="padding: 15px 0; align-items:center; margin: 0; font-family: Oswald; display: flex; flex-direction: row; justify-content: center; text-align: center;">
+    <p id="ParagrapheTexte" style="padding: 5em; align-items:center; margin: 0; font-family: Oswald; display: flex; flex-direction: row; justify-content: center; text-align: center;">
         Bienvenue sur le blog de l'Aéroclub, créé par moi-même,<br> Al karshi Abdullrahman, passionné d'aviation et développeur web.<br>
         J'ai conçu cet espace pour partager notre passion du vol et offrir un lieu de discussion virtuel pour tous les membres de notre aéroclub.<br>
         Ici, vous trouverez des articles sur des discussions, des conseils de pilotage.<br>
         Le blog propose également un forum de discussion.<br>
         Rejoignez-nous et découvrez les cieux avec notre blog, où chaque vol est une nouvelle aventure.
-    </h4>
+    </p>
 
     <!-- 1ère SECTION -->
     <section id="blocavion">
