--- a/templates/categorie/list.html.twig
+++ b/templates/categorie/list.html.twig
@@ -1,12 +1,24 @@
-{# templates/categorie/list.html.twig #}
 {% extends 'base.html.twig' %}
 
 {% block title %}Liste des Catégories{% endblock %}
 {% block body %}
-    <h1>Liste des Catégories</h1>
-    <ul>
-        {% for categorie in categories %}
-            <li>{{ categorie.name }}</li>
-        {% endfor %}
-    </ul>
+    <div style="display: flex; justify-content: center; margin: 15px; width:70%; height: auto; border: 2px solid white; border-radius: 10px; padding: 20px;">
+        <div style="width: 100%;">
+            <h1 style="text-align: center;">Liste des Catégories</h1>
+            <br>
+            <ul style="list-style: none; padding: 0;">
+                {% for categorie in pagination %}
+                    <!-- Ternaire 1 sur 2 catégories sera en transparent et l'autre en bleu -->
+                    <li style="margin-bottom: 10px; padding: 10px; {% if loop.index is odd %}background-color: #5ED9F4;{% endif %}">
+                        <a href="{{ path('app_articles_par_categorie', { 'id': categorie.id }) }}" 
+                           style="font-size: 30px; text-decoration: none; color: black;">{{ categorie.name }}</a>
+                    </li>
+                {% endfor %}
+            </ul>
+            <!-- Affichage de la pagination -->
+            <div class="pagination">
+                {{ knp_pagination_render(pagination) }}
+            </div>
+        </div>
+    </div>
 {% endblock %}
