--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -1,25 +1,22 @@
+{# templates/reset_password/request.html.twig #}
 {% extends 'base.html.twig' %}
 
-{% block title %}Reset your password{% endblock %}
+{% block title %}Réinitialisation de mot de passe{% endblock %}
 
 {% block body %}
-    {% for flash_error in app.flashes('reset_password_error') %}
+
+    {% for flash_error in app.flashes('error') %}
         <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
     {% endfor %}
 
-    <form action="{{ path('app_forgot_password_request') }}" method="post" style="height: auto; border: 2px solid white; border-radius: 10px; padding: 20px; font-size: 20px; margin-top: 35px; padding-top: 35px;">
-        <h1 style="padding-bottom: 25px;">Modifier ton Mot de Passe</h1>
-    
-        {{ form_start(requestForm) }}
-            {{ form_row(requestForm.email, {'attr': {'style': 'width: 50%; margin-left: 15px; border-radius: 10px;', 'name': 'request_form[email]', 'type': 'email', 'required': true }}) }}
-            <div style="padding: 15px;">
-                <h5>
-                    Enregistrer votre adresse mail et nous allons vous envoyez un lien afin de modifier votre mot de passe.
-                </h5>
-            </div>
-    
-            <button type="submit" class="btn btn-primary">Valider</button>
-        {{ form_end(requestForm) }}
+    {% for flash_success in app.flashes('success') %}
+        <div class="alert alert-success" role="alert">{{ flash_success }}</div>
+    {% endfor %}
+
+    <h1>Demande de réinitialisation de mot de passe</h1>
+    <form action="{{ path('app_password_request') }}" method="post">
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required>
+        <button type="submit">Envoyer</button>
     </form>
-    
 {% endblock %}
